src/kubernetes/validatingadmissionpolicy-safe-upgrades.yaml
#
# config/crd/standard/gateway.networking.k8s.io_vap_safeupgrades.yaml
#
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "safe-upgrades.gateway.networking.k8s.io"
  labels:
    app: ${ProjectName}
    app.kubernetes.io/name: ${ProjectName}
    app.kubernetes.io/version: ${Version}
    app.kubernetes.io/managed-by: Kaptain
    app.kubernetes.io/part-of: ${ProductName}
    kaptain.org/environment: ${Environment}
    kaptain.org/product: ${ProductName}
    kaptain.org/project-name: ${ProjectName}
    kaptain.org/version: ${Version}
    kaptain.org/owner: kube-kaptain
  annotations:
    gateway.networking.k8s.io/bundle-version: v1.5.0-dev
    gateway.networking.k8s.io/channel: standard
    kaptain.org/upstream-source: kubernetes-sigs/gateway-api v1.5.1
    kaptain.org/source-repository: kube-kaptain/vendor-kubernetes-sigs-gateway-api
    kaptain.org/generated-by: Generated by .github/bin/update-gateway-api.bash
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["apiextensions.k8s.io"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["*"]
  validations:
    - expression: "object.spec.group != 'gateway.networking.k8s.io' || oldObject == null || ( has(object.metadata.annotations) && object.metadata.annotations.exists(k, k == 'gateway.networking.k8s.io/channel') && object.metadata.annotations['gateway.networking.k8s.io/channel'] == 'standard' ) || ( oldObject != null && has(oldObject.metadata.annotations) && oldObject.metadata.annotations.exists(k, k == 'gateway.networking.k8s.io/channel') && oldObject.metadata.annotations['gateway.networking.k8s. [...]
      message: "Installing experimental CRDs on top of standard channel CRDs is prohibited by default. Uninstall ValidatingAdmissionPolicy safe-upgrades.gateway.networking.k8s.io to install experimental CRDs on top of standard channel CRDs."
      reason: Invalid
    - expression: "object.spec.group != 'gateway.networking.k8s.io' || (has(object.metadata.annotations) && object.metadata.annotations.exists(k, k == 'gateway.networking.k8s.io/bundle-version') && !matches(object.metadata.annotations['gateway.networking.k8s.io/bundle-version'], 'v1.[0-4].\\\\d+') && !matches(object.metadata.annotations['gateway.networking.k8s.io/bundle-version'], 'v0'))" #TODO Kubernetes 1.37: Migrate to kubernetes semver library
      message: "Installing CRDs with version before v1.5.0 is prohibited by default. Uninstall ValidatingAdmissionPolicy safe-upgrades.gateway.networking.k8s.io to install older versions."
      reason: Invalid
