src/kubernetes/validatingadmissionpolicybinding-safe-upgrades.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: safe-upgrades.gateway.networking.k8s.io
  labels:
    app: ${ProjectName}
    app.kubernetes.io/name: ${ProjectName}
    app.kubernetes.io/version: ${Version}
    app.kubernetes.io/managed-by: Kaptain
    app.kubernetes.io/part-of: ${ProductName}
    kaptain.org/environment: ${Environment}
    kaptain.org/product: ${ProductName}
    kaptain.org/project-name: ${ProjectName}
    kaptain.org/version: ${Version}
    kaptain.org/owner: kube-kaptain
  annotations:
    gateway.networking.k8s.io/bundle-version: v1.6.1
    gateway.networking.k8s.io/channel: standard
    kaptain.org/upstream-source: kubernetes-sigs/gateway-api v1.6.1
    kaptain.org/source-repository: kube-kaptain/vendor-kubernetes-sigs-gateway-api
    kaptain.org/generated-by: Generated by .github/bin/update-gateway-api.bash
spec:
  policyName: safe-upgrades.gateway.networking.k8s.io
  validationActions: [Deny]
  matchResources:
    resourceRules:
      - apiGroups: ["apiextensions.k8s.io"]
        apiVersions: ["v1"]
        resources: ["customresourcedefinitions"]
        operations: ["CREATE", "UPDATE"]
